--- a/0_about.Rmd
+++ b/0_about.Rmd
@@ -36,7 +36,7 @@ library(tidyverse)
 #gitlabr::use_gitlab_ci(type = "bookdown")
 #usethis::use_github_action()
 
-
+sparkline(0)
 use_providers(get_providers())
 flexdashboard::flex_dashboard(self_contained = F)
 
